--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -19,7 +19,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-color: #454545;
+  background-color: #444444;
 }
 
 .circle_wrap {
@@ -34,19 +34,19 @@ body {
 .circle_wrap_hide {
   content: "";
   display: block;
-  background-color: #454545;
+  background-color: #444444;
   height: 500px;
   width: 500px;
-  z-index: 10;
+  z-index: 5;
   position: absolute;
-  animation: rotate 15s linear 0s infinite normal;
+  animation: minus_rotate 15s linear 0s infinite normal;
   transform-origin: 0 0;
   top: 50%;
   left: 50%;
 }
 
 .circle img:nth-child(1) {
-  z-index: 1;
+  z-index: 2;
   top: 30px;
   left: 30px;
   position: absolute;
@@ -57,34 +57,34 @@ body {
 }
 
 .circle img:nth-child(2) {
-  z-index: 2;
+  z-index: 4;
   top: 20px;
   left: 20px;
   position: absolute;
   height: 440px;
   width: 440px;
   opacity: 0.7;
-  animation: rotate 20s cubic-bezier(0.58, 0.81, 0.46, 0.12) 1.1s infinite normal;
+  animation: rotate 20s cubic-bezier(0.58, 0.81, 0.46, 0.12) 1.05s infinite normal;
 }
 
 .circle img:nth-child(3) {
-  z-index: 3;
+  z-index: 6;
   top: 10px;
   left: 10px;
   position: absolute;
   height: 460px;
   width: 460px;
   opacity: 0.7;
-  animation: rotate 30s cubic-bezier(0.58, 0.81, 0.46, 0.12) 2.2s infinite normal;
+  animation: rotate 30s cubic-bezier(0.58, 0.81, 0.46, 0.12) 2.1s infinite normal;
 }
 
 .circle img:nth-child(4) {
-  z-index: 4;
+  z-index: 8;
   top: 0px;
   left: 0px;
   position: absolute;
   height: 480px;
   width: 480px;
   opacity: 0.7;
-  animation: rotate 40s cubic-bezier(0.58, 0.81, 0.46, 0.12) 3.3s infinite normal;
+  animation: rotate 40s cubic-bezier(0.58, 0.81, 0.46, 0.12) 3.15s infinite normal;
 }
