--- a/stylesheet/style.scss
+++ b/stylesheet/style.scss
@@ -1,6 +1,6 @@
 @import "_variable.scss";
 @import "_animation.scss";
-$bg_color:rgb(69, 69, 69);
+$bg_color:#444444;
 body{
   height: 100vh;
   width: 100vw;
@@ -19,9 +19,9 @@ body{
       display: block;
       background-color: $bg_color;
       height: 500px; width: 500px;
-      z-index: 10;
+      z-index: 5;
       position: absolute;
-      animation: rotate 15s linear 0s infinite normal;
+      animation: minus_rotate 15s linear 0s infinite normal;
       transform-origin: 0 0;
       top: 50%;left: 50%;
     }
@@ -31,13 +31,13 @@ body{
   $size:20;
   @for $i from 1 through 4{
     img:nth-child(#{$i}){
-      z-index: #{$i};
+      z-index: #{$i * 2};
       top:#{$size / 2 * (4 - $i)}px;
       left:#{$size / 2 * (4 - $i)}px;
       position: absolute;
       height: #{$i * $size + 400}px; width:#{$i * $size + 400}px;
       opacity: 0.7;
-      animation: rotate #{$i * 10}s cubic-bezier(.58,.81,.46,.12) #{$i * 1.1 - 1.1}s infinite normal;
+      animation: rotate #{$i * 10}s cubic-bezier(.58,.81,.46,.12) #{$i * 1.05 - 1.05}s infinite normal;
     }
   }
 }
